tests/invalid/List_Invalid_4.whiley
import * from whiley.lang.*

method main(System.Console sys) -> void:
    int x = 1
    int y = x[0]
